# cla

./: .gitignore  MANIFEST.in  Makefile  README.md  py-dev-requirements.txt  pyproject.toml  valgrind_cudart.supp
.github/workflows/: pr-test.yaml
benchmark/: README.md  analysis.ipynb  cla_cuda_benchmark.cu  pycla_benchmark.py
cla/: CMakeLists.txt
cla/cuda/: CMakeLists.txt  cuda_utils.cu  device_management.c  device_management.cu  utils.cu
cla/include/: CMakeLists.txt  constants.h  cuda_utils.h  device_management.h  entities.h  matrix.h  matrix_operations.h  matrix_utils.h  vector_operations.h  vector_utils.h
cla/matrix/: CMakeLists.txt  add.cu  comparisons.c  matrix.c  mult.cu  mult_scalar.cu  norms.c  sub.cu  trace.c  utils.c
cla/utils/: CMakeLists.txt  constants.c
cla/vector/: CMakeLists.txt  add.cu  angle.c  comparisons.c  dot_product.c  element_wise_prod.cu  element_wise_prod_mult_scalar.cu  mult_scalar.cu  norms.c  projection.c  sub.cu  utils.c  vector.c  vector_add.cu
examples/: intro.ipynb
pycla/core/: __init__.py  cuda_device.py  matrix.py  vector.py
samples/: c_api.c  python_api.ipynb
test/c/: colors.h  memory_leak.c  memory_stability.c  suite.c
test/python/: dummy.py  test_dummy.py  test_matrix.py  test_vector.py
tools/: cla_header_to_ctypes.py  ensure_compatibility.py
