[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycla"
version = "0.0.0"
readme = "README.md"
description = "CLA is a simple toy library for basic vector/matrix operations written C with a Python API."

requires-python = ">=3.13"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
repository = "https://github.com/moesio-f/cla"

[tool.setuptools]
packages = ["pycla"]

