[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycla"
version = "1.1.1"
readme = "README.md"
description = "CLA is a simple toy library for basic vector/matrix operations written C + CUDA with a Python API."
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
]
keywords = [ "linear algebra", "vector", "matrix", "c", "ctypes", "cuda", "gpu" ]

[project.urls]
repository = "https://github.com/moesio-f/cla"

[tool.setuptools]
packages = ["pycla"]

